<resources>
    <string name="app_name">To Do List App</string>
    <string name="btn_login">Login</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="home_title">Home Page</string>
    <string name="login_title">Login Page</string>
    <string name="nowdate">10 Sep 2020</string>
    <string name="titleTask">Buy Something</string>
    <string name="dateTask">20 Sep 2020</string>
    <string name="username">Hai, Ryo Aji</string>
    <string name="add_new_task_title">New Task</string>
    <string name="add_title_label">Add Title</string>
    <string name="title_placeholder">What will you do?</string>
    <string name="add_description_label">Add Description</string>
    <string name="description_placeholder">How will you do that?</string>
    <string name="date_placeholder">When will?</string>
    <string name="create_task_btn">CREATE NOW</string>
    <string name="cancelBtn">Cancel</string>
    <string name="edit_task_details">Edit Task Details</string>
    <string name="edit_title_label">Edit Title</string>
    <string name="edit_title_content">Buy something</string>
    <string name="edit_description_label">Edit Description</string>
    <string name="edit_description_content">Go to supermarket first</string>
    <string name="target_date_label">Target Date</string>
    <string name="target_date_content">2020-10-15</string>
    <string name="confirmBtn">Sure</string>
    <string name="delete_confirmation_task">Are you sure to delete this task?</string>
    <string name="noMoreList">No more list</string>
    <string name="retype_password">Retype password</string>
    <string name="register">Register</string>
    <string name="gretings">Selamat Pagi</string>
</resources>
