<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/email_label" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_label"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:text="@string/btn_login"
            android:textColor="?attr/textWhiteColor" />

        <TextView
            android:id="@+id/tvToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:textAlignment="center"
            android:text="Don't have an account? Register"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btnGoogleLogin"
            android:background="#fff"
            android:drawableLeft="@drawable/common_google_signin_btn_icon_light"
            android:textColor="@color/azurePrimaryDark"
            android:text="Sign In"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="80dp"
            android:layout_height="40dp"/>

    </LinearLayout>

</RelativeLayout>