<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#A3E9F7EF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edittask.EditTaskActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/gradient_navbar"
        android:layout_height="170dp">

        <TextView
            android:id="@+id/titlepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:textAlignment="center"
            android:text="@string/edit_task_details"
            android:textColor="#fff"
            android:textSize="27sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/rounded_list_card"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="-57dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edittitleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_title_label"
                android:layout_marginBottom="10dp"
                android:textColor="#0A1458"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/etTitleTask"
                android:background="@drawable/input_field_task"
                android:inputType="text"
                android:paddingLeft="7dp"
                android:textColorHint="#B8A3A3"
                android:textColor="#000"
                android:maxLength="30"
                android:text="@string/edit_title_content"
                android:layout_width="match_parent"
                android:layout_height="47dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editdescTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_description_label"
                android:layout_marginBottom="10dp"
                android:textColor="#0A1458"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/etDescTask"
                android:background="@drawable/input_field_task"
                android:inputType="textMultiLine"
                android:paddingLeft="7dp"
                android:textColorHint="#B8A3A3"
                android:textColor="#000"
                android:maxLength="90"
                android:text="@string/edit_description_content"
                android:layout_width="match_parent"
                android:layout_height="62dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editdateTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/target_date_label"
                android:layout_marginBottom="10dp"
                android:textColor="#0A1458"
                android:textSize="19sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="47dp">
                <EditText
                    android:id="@+id/etDateTask"
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/input_field_task"
                    android:text="@string/target_date_content"
                    android:inputType="date"
                    android:paddingLeft="7dp"
                    android:textColor="#000"
                    android:textColorHint="#B8A3A3"
                    tools:ignore="MissingConstraints"
                    android:editable="false"
                    tools:layout_editor_absoluteY="2dp" />

                <ImageButton
                    android:id="@+id/datePickerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/ic_menu_my_calendar"
                    android:datePickerMode="calendar"
                    android:background="?attr/colorPrimarySurface"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="2dp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/updateTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/create_btn"
        android:fontFamily="sans-serif-medium"
        android:text="Save Update"
        android:textColor="#FFF"
        android:textStyle="bold" />
    <Button
        android:id="@+id/deleteTaskBtn"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="16dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="DELETE"
        android:background="@drawable/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"/>

</LinearLayout>